--- a/backend/frontend/src/style/CustomModal.css
+++ b/backend/frontend/src/style/CustomModal.css
@@ -28,10 +28,10 @@
   right: 1rem;
   background: transparent;
   border: none;
-  border-radius: 20px;
-  padding: 5px 10px;
+  border-radius: 2rem;
+  padding: 0.5rem 1.2rem;
   color: var(--color-5);
-  font-size: 1.5rem;
+  font-size: 16px;
   cursor: pointer;
   /* background-color: transparent; */
   background-color: var(--button-delete-color);
