--- a/backend/frontend/src/style/RSProfile.css
+++ b/backend/frontend/src/style/RSProfile.css
@@ -120,18 +120,18 @@ strong {
   padding: var(--button-padding);
   /* background-color: transparent; */
   /* background-color: var(--button-cancel-primary-color); */
-  background-color: var(--button-cancel-exp-primary);
-  border: 1px solid var(--button-primary-color);
+  background-color: var(--button-secondary-color);
+  border: var(--button-secondary-border-color);
   border-radius: var(--button-border-radius);
 
   cursor: pointer;
   color: var(--button-primary-color);
 }
 .rs-profile-section .buttons-container .cancel-button:hover {
-  background-color: var(--button-cancel-exp-hover);
+  background-color: var(--button-secondary-hover-color);
 }
 .rs-profile-section .buttons-container .cancel-button:active {
-  background-color: var(--button-cancel-exp-active);
+  background-color: var(--button-secondary-active-color);
 }
 
 .rs-profile-section .edit-button:hover {
