--- a/backend/frontend/src/style/RSRegisterAndLogin.css
+++ b/backend/frontend/src/style/RSRegisterAndLogin.css
@@ -139,13 +139,14 @@
 .rs-register-login-page .cancel-button {
   margin-top: 0;
   width: fit-content;
-  color: var(--button-primary-color)
+  color: var(--button-primary-color);
+  background-color: var(--button-secondary-color)
 }
 .rs-register-login-page .cancel-button:hover {
   /* background-color: #163825; */
-  background-color: var(--button-cancel-hover-color);
+  background-color: var(--button-secondary-hover-color);
 }
 .rs-register-login-page .cancel-button:active {
   /* background-color: #163825; */
-  background-color: var(--button-cancel-active-color);
+  background-color: var(--button-secondary-active-color);
 }
