--- a/backend/frontend/src/style/SuccessPage.css
+++ b/backend/frontend/src/style/SuccessPage.css
@@ -76,3 +76,18 @@
   flex-grow: 1;
   max-width: 420px;
 }
+
+.back-to-main-button {
+  background-color: var(--button-primary-color);
+  padding: var(--button-padding);
+  border-radius: var(--button-border-radius);
+  transition: background-color 0.3s ease;
+}
+ 
+.back-to-main-button:hover {
+  background-color: var(--button-primary-hover-color);
+}
+
+.back-to-main-button:active {
+  background-color: var(--button-primary-active-color);
+}
