last changes made

--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -34,7 +34,7 @@
   --button-delete-hover-color: rgb(226, 82, 82);
   --button-delete-active-color: rgb(121, 37, 37);
   --cards-border-radius: 0.8rem;
-  --settings-cards-background: #fbfffc;
+  /* --settings-cards-background: #fbfffc; */
   /* --settings-cards-background: #fafafa06;
   --button-cancel-exp-primary: #eee;
   --button-cancel-exp-hover: #00000017;
