--- a/backend/frontend/src/style/Basket.css
+++ b/backend/frontend/src/style/Basket.css
@@ -31,17 +31,17 @@
 
 .delivery-toggle {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 2rem;
   margin-bottom: 2rem;
   background-color: #eee;
-
   border-radius: var(--button-border-radius);
 }
 
 
 .delivery-toggle button {
    padding: var(--button-padding);
-  margin: 0 0.1rem;
+  /* margin: 0 0.1rem; */
  
   border: none;
   background-color: var(--button-secondary-color);
