--- a/backend/frontend/src/style/DeliveryTracker.css
+++ b/backend/frontend/src/style/DeliveryTracker.css
@@ -34,7 +34,7 @@
   border-radius: 1rem;
   background-color: rgb(38, 98, 65, 0.2);
   padding: 1rem;
-  background-color: white;
+  background-color: var(--cards-background-color);
   border-radius: 0.8rem;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
@@ -76,16 +76,20 @@
 }
 
 .back-to-main-button {
-  padding: 1rem 2rem;
-  background-color: rgb(38, 98, 65);
+  padding: var(--button-padding);
+  background-color: var(--button-primary-color);
   color: white;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: var(--button-border-radius);
   cursor: pointer;
   font-size: 1.6rem;
   transition: background-color 0.3s ease;
 }
 
 .back-to-main-button:hover {
-  background-color: rgb(63, 156, 105);
+  background-color: var(--button-primary-hover-color);
+}
+
+.back-to-main-button:active {
+  background-color: var(--button-primary-active-color);
 }
