--- a/backend/frontend/src/style/RSMenu.css
+++ b/backend/frontend/src/style/RSMenu.css
@@ -98,7 +98,7 @@
 
 .rs-menu-container .edit-keywords .add-keywords-icon {
   position: absolute;
-  top: 3.5rem;
+  top: 3.9rem;
   left: 20rem;
   cursor: pointer;
 }
@@ -114,12 +114,11 @@
   border-radius: var(--button-border-radius);
 }
 .rs-menu-container .menu-category .edit-form .buttons-container .save1-button:hover {
-  background-color: var(--button-primary-hover-color)
+  background-color: var(--button-primary-hover-color);
 }
 .rs-menu-container .menu-category .edit-form .buttons-container .save1-button:active {
-  background-color: var(--button-primary-active-color)
+  background-color: var(--button-primary-active-color);
 }
-
 
 .rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button {
   font-size: 1.4rem;
@@ -129,10 +128,10 @@
   border-radius: var(--button-border-radius);
 }
 .rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button:hover {
-  background-color: var(--button-cancel-hover-color)
+  background-color: var(--button-cancel-hover-color);
 }
 .rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button:active {
-  background-color: var(--button-cancel-active-color)
+  background-color: var(--button-cancel-active-color);
 }
 
 .keywords .keywords-edit-icon {
@@ -339,7 +338,7 @@
   color: var(--button-primary-color);
   border-radius: var(--button-border-radius);
   padding: var(--button-padding);
-  border: 1px solid var(--button-primary-color)
+  border: 1px solid var(--button-primary-color);
 }
 .rs-menu-container .buttons-container .cancel-keywords-button:hover {
   background-color: var(--button-cancel-exp-hover);
@@ -351,11 +350,9 @@
 .rs-menu-container .edit-button {
   display: block;
 
-  
   padding: var(--button-padding);
 
   margin: 2rem auto;
-  
 
   color: #fff;
   /* background-color: #165e4b; */
