--- a/backend/frontend/src/style/RSOrdersActive.css
+++ b/backend/frontend/src/style/RSOrdersActive.css
@@ -18,11 +18,6 @@
   padding: 2rem;
 }
 
-.rs-orders-active-container button.active {
-  background-color: #4caf50;
-  color: white;
-}
-
 .rs-orders-active-container button {
   background-color: white;
   color: black;
@@ -30,14 +25,20 @@
   padding: 0.6rem 1.6rem;
   text-align: left;
   font-size: 1.4rem;
-  margin: 0.4rem 2rem;
+  margin: 0.4rem 1rem;
   cursor: pointer;
   transition-duration: 0.4s;
+  border-radius: 0.4rem;
 }
 
 .rs-orders-active-container button:hover {
   background-color: #98e79b;
   color: black;
+}
+
+.rs-orders-active-container button:active {
+  background-color: #4caf50;
+  color: white;
 }
 
 .rs-orders-active-container button:disabled {
@@ -47,7 +48,7 @@
 }
 
 .rs-orders-active-container .cards {
-  background: white;
+  background-color: var(--cards-background-color);
   border-radius: var(--cards-border-radius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 2rem;
@@ -65,6 +66,10 @@
   color: #333;
 }
 
+.rs-orders-active-container .status-timestamp {
+  padding: 0 1rem;
+}
+
 .cards strong {
   color: #555;
 }
@@ -79,8 +84,8 @@
 }
 
 .progress ul li {
-  background: #e7f3ff;
-  border-left: 5px solid #007bff;
+  background: #d9fcdc;
+  border-left: 5px solid var(--color-2);
   margin: 1rem 0;
   padding: 1rem;
   border-radius: 0.4rem;
@@ -88,5 +93,5 @@
 }
 
 .progress ul li:nth-child(even) {
-  background: #f3f7ff;
+  background: #eefff0;
 }
