--- a/backend/frontend/src/style/Searchbar.css
+++ b/backend/frontend/src/style/Searchbar.css
@@ -26,7 +26,7 @@
   );
   border-radius: 5rem;
   width: 90%;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .cities-keywords-greet b {
@@ -71,7 +71,6 @@
   padding: 1rem 2rem;
   border: none;
 
-  
   background-color: var(--button-primary-color);
 
   border-radius: 0 3rem 3rem 0;
@@ -84,10 +83,10 @@
 
 .search-button:hover {
   /* background-color: #163825; */
-  background-color: var(--button-primary-hover-color)
+  background-color: var(--button-primary-hover-color);
 }
 .search-button:active {
-  background-color: var(--button-primary-active-color)
+  background-color: var(--button-primary-active-color);
 }
 
 /* SEARCH BAR IN THE SEARCH-RESULTS PAGE */
