--- a/backend/frontend/src/style/Settings.css
+++ b/backend/frontend/src/style/Settings.css
@@ -10,15 +10,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-
-  /* background-color: #fff; */
-  /* background-color: rgba(0, 0, 0, 0.01); */
-  background-color: var(--settings-cards-background);
- 
-
- 
+  background-color: var(--cards-background-color);
   border-radius: 1rem;
-
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 2rem;
 }
@@ -79,16 +72,16 @@
   background: none;
   border: none;
   cursor: pointer;
-
-  
   color: var(--button-primary-color);
   transition: color 0.3s;
 }
+
 .settings-edit:hover {
   color: var(--button-primary-hover-color);
 }
+
 .settings-edit:active {
-  color: var(--button-primary-active-color)
+  color: var(--button-primary-active-color);
 }
 
 .settings-save {
@@ -99,15 +92,11 @@
   border: 1px solid var(--color-2);
   border-radius: var(--button-border-radius);
   margin: 0.5rem auto;
-cursor: pointer;
+  cursor: pointer;
   transition: background-color 0.3s;
   align-self: center;
-
   font-size: 1.6rem;
- 
 }
-
-
 
 .settings-cancel {
   width: 36%;
@@ -117,31 +106,26 @@ cursor: pointer;
   border: 1px solid var(--color-2);
   border-radius: 0.5rem;
   font-size: 1.6rem;
-
   cursor: pointer;
   transition: background-color 0.3s;
   align-self: center;
 }
 
-
 .settings-save:hover {
   background-color: var(--button-primary-hover-color);
 }
+
 .settings-save:active {
   background-color: var(--button-primary-active-color);
 }
 
 .settings-cancel {
-
   width: 30%;
-  /* background-color: var(--button-cancel-primary-color);
-  background-color: white; */
   background-color: var(--button-cancel-exp-primary);
   color: var(--button-primary-color);
   border: 1px solid var(--button-primary-color);
   padding: var(--button-padding);
   border-radius: var(--button-border-radius);
-
   cursor: pointer;
   width: 30%;
   font-size: 16px;
@@ -153,10 +137,10 @@ cursor: pointer;
 .settings-cancel:hover {
   background-color: var(--button-cancel-exp-hover);
 }
+
 .settings-cancel:active {
   background-color: var(--button-cancel-exp-active);
 }
-
 
 .settings-cancel {
   background-color: white;
@@ -169,22 +153,18 @@ cursor: pointer;
   background-color: #ffe;
 }
 
-
 .settings-delete {
-  background-color: var( --button-delete-color);
+  background-color: var(--button-delete-color);
   transition: background-color 0.3s;
   display: block;
   margin: 0 auto;
   margin-top: 2rem;
   width: 40%;
   min-width: 100px;
-
   padding: var(--button-padding);
   color: white;
   border: none;
   border-radius: var(--button-border-radius);
-
-  
   cursor: pointer;
   font-size: 1.6rem;
 }
