--- a/backend/frontend/src/style/SuccessPage.css
+++ b/backend/frontend/src/style/SuccessPage.css
@@ -20,7 +20,7 @@
 }
 
 .success-card {
-  background-color: white;
+  background-color: var(--cards-background-color);
   border-radius: var(--cards-border-radius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 2rem;
@@ -43,7 +43,7 @@
   margin-bottom: 2rem;
   text-align: left;
   width: 100%;
-  background-color: white;
+  background-color: var(--cards-background-color);
   border-radius: var(--cards-border-radius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 2rem;
