--- a/backend/frontend/src/style/Navbar.css
+++ b/backend/frontend/src/style/Navbar.css
@@ -104,6 +104,8 @@ nav .logo {
   text-decoration: none;
   display: block;
   border-bottom: 1px solid rgb(195, 190, 190);
+  color: inherit;
+  font-weight: bold;
 }
 
 .dropdown-item:visited {
@@ -159,7 +161,7 @@ nav .logo {
 
 .cart-logo .item-count {
   background-color: var(--color-3);
-  color: white;
+  color: black;
   font-weight: bold;
   border-radius: 50%;
   padding: 0.2rem 0.6rem;
