--- a/backend/frontend/src/style/RSNavbar.css
+++ b/backend/frontend/src/style/RSNavbar.css
@@ -11,12 +11,10 @@
   color: white;
 }
 
-
 .rs-nav .logo-nav {
   font-size: 2.4rem;
-
   font-weight: bold;
-  color: var(--color-1);
+  color: var(--button-primary-color);
   cursor: pointer;
 }
 
@@ -29,17 +27,10 @@
 }
 
 .rs-nav button {
-
   padding: var(--button-padding);
- 
-  
   border-radius: var(--button-border-radius);
-
- 
   margin: 0 1rem;
   border: none;
- 
-
   cursor: pointer;
   background-color: var(--button-primary-color);
   color: white;
@@ -63,11 +54,12 @@
   background-color: transparent;
   color: var(--color-1);
   border: 1px solid var(--color-1);
-
 }
+
 .rs-nav .login-button:hover {
   background-color: var(--button-secondary-hover-color);
 }
+
 .rs-nav .login-button:active {
   background-color: var(--button-secondary-active-color);
 }
