started media queries and fixed some bugs

--- a/backend/frontend/src/style/RSNavbar.css
+++ b/backend/frontend/src/style/RSNavbar.css
@@ -18,6 +18,11 @@
   cursor: pointer;
 }
 
+.rs-nav .rs-logo {
+  width: 23rem;
+  cursor: pointer;
+}
+
 .rs-nav .buttons-nav {
   display: flex;
 }
