--- a/backend/frontend/src/style/Basket.css
+++ b/backend/frontend/src/style/Basket.css
@@ -38,19 +38,15 @@
   border-radius: var(--button-border-radius);
 }
 
-
 .delivery-toggle button {
-   padding: var(--button-padding);
+  padding: var(--button-padding);
   /* margin: 0 0.1rem; */
- 
   border: none;
   background-color: var(--button-secondary-color);
   /* background-color: #eee; */
   /* background-color: var(--background-color); */
   cursor: pointer;
-
   border-radius: var(--button-border-radius);
-
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -58,7 +54,7 @@
   font-size: 1.6rem;
   transition: background-color 0.3s ease;
   color: var(--button-primary-color);
-  border: var(--button-secondary-border-color)
+  border: var(--button-secondary-border-color);
 }
 .delivery-toggle button:hover {
   background-color: var(--button-secondary-hover-color);
@@ -66,7 +62,6 @@
 .delivery-toggle button:active {
   background-color: var(--button-secondary-active-color);
   color: var(--color-1);
-  
 }
 
 .delivery-toggle button.active {
@@ -78,7 +73,7 @@
 }
 
 .delivery-toggle button.active:active {
-  background-color: var( --button-primary-active-color);
+  background-color: var(--button-primary-active-color);
 }
 
 .basket ul {
@@ -116,18 +111,16 @@
 .basket .basket-item-quantity button {
   padding: 0.5rem 1rem;
   border: none;
-
   border-radius: var(--button-border-radius);
   background-color: #f0f0f0;
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease;
 }
+
 .basket .basket-item-quantity .add {
   font-size: 18px;
   padding: 0.3rem 1rem;
-  /* padding-left: 1.2rem;
-  padding-right: 1.2rem; */ 
   border: var(--button-secondary-border-color);
 }
 
@@ -135,40 +128,28 @@
   font-size: 18px;
   font-weight: 700;
   padding: 0.3rem 1.2rem;
-  /* padding-left: 1.2rem;
-  padding-right: 1.2rem; */ 
   border: var(--button-secondary-border-color);
 }
 .basket .basket-item-quantity .subtract:hover {
   padding: 0.3rem 1.2rem;
   background-color: var(--button-secondary-hover-color);
-
 }
 .basket .basket-item-quantity .subtract:active {
   padding: 0.3rem 1.2rem;
   background-color: var(--button-secondary-active-color);
-
 }
 
 .basket .basket-item-quantity button:hover {
-  /* background-color: #ddd; */
   background-color: var(--button-secondary-hover-color);
-
-
-  /* background-color: #f0f0f0; */
   cursor: pointer;
   font-size: 18px;
-
 }
 .basket .basket-item-quantity button:active {
   background-color: var(--button-secondary-active-color);
 }
 
-
-
 .basket .basket-item-quantity span {
   padding: 0 1rem;
-  /* font-size: 1.3rem; */
 }
 
 .basket .basket-item-total {
@@ -176,7 +157,6 @@
 }
 
 .basket .basket-remove-button {
-
   padding: 0.5rem 1.2rem;
   border: none;
   border-radius: 2rem;
@@ -204,16 +184,15 @@
 .basket .basket-checkout-button {
   display: block;
   width: 100%;
-
   padding: var(--button-padding);
   margin-top: 2rem;
   border: none;
-border-radius: var(--button-border-radius);
- background: var(--button-primary-color);
-
+  border-radius: var(--button-border-radius);
+  background: var(--button-primary-color);
   color: white;
   cursor: pointer;
   font-size: 1.8rem;
+  transition: background-color 0.3s ease;
 }
 
 .basket .basket-checkout-button:hover {
