--- a/backend/frontend/src/style/RSRegisterPage.css
+++ b/backend/frontend/src/style/RSRegisterPage.css
@@ -44,7 +44,7 @@
 
 .rs-section-partner {
   margin-top: 1rem;
-  padding: 5rem 10rem 10rem;
+  padding: 10rem 2rem 10rem;
   background-color: var(--background-color);
 }
 
@@ -53,39 +53,59 @@
   color: #343a40;
 }
 
-.rs-section-partner div {
-  display: flex;
+.rs-section-partner .rs-section-container {
+  /* display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
   padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 3rem;
+  justify-content: center;
+  width: 70%;
+  margin: 0 auto;
 }
 
-.rs-section-partner div div {
+.rs-section-partner .rs-section-card {
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 0.8rem;
-  max-width: 300px;
-  margin: 1rem;
-  padding: 2rem;
-  text-align: left;
+  /* height: 35rem; */
+  /* max-width: 300px; */
+  /* margin: 1rem; */
+  padding: 2rem 3rem;
+  /* text-align: left; */
 }
 
-.rs-section-partner div div img {
-  border-radius: 0.8rem 0.8rem 0 0;
-  max-width: 100%;
-  height: 30vh;
+.rs-section-partner .rs-section-card .image-container {
+  min-width: 25rem;
+  height: 25rem;
+}
+
+.rs-section-partner .rs-section-card img {
+  /* border-radius: 0.8rem 0.8rem 0 0; */
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
-.rs-section-partner div div h3 {
+.rs-section-partner .rs-section-card h3 {
   color: #343a40;
   margin-top: 1rem;
   width: 100%;
   padding: 1rem 0;
 }
 
-.rs-section-partner div div p {
+.rs-section-partner .rs-section-card p {
   color: #6c757d;
   margin-top: 0.5rem;
   text-align: center;
+}
+
+@media (max-width: 1220px) {
+  .rs-section-partner {
+    /* margin-top: 1rem; */
+    padding: 5rem 1rem 10rem;
+    /* background-color: var(--background-color); */
+  }
 }
