--- a/backend/frontend/src/style/SearchResults.css
+++ b/backend/frontend/src/style/SearchResults.css
@@ -104,6 +104,7 @@
     margin: 0;
     border-radius: 0.8rem;
     text-align: center;
+    align-self: center;
   }
 }
 
@@ -111,5 +112,55 @@
   .cards-results-container .restaurant-info {
     /* display: flex; */
     flex-direction: column;
+  }
+}
+
+@media (max-width: 780px) {
+  .card-results {
+    
+    flex-direction: column;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    align-items: center;
+  }
+  .card-results .restaurant-info,
+  .card-results .restaurant-info .restaurant-card {
+    text-align: center;
+  }
+  .card-results .restaurant-info .restaurant-card h1 {
+    align-self: center;
+    align-items: center;
+    text-align: center;
+  }
+}
+@media (max-width: 674px){
+  .restaurants-current-offers ul {
+    align-items: center;
+    text-align: center;
+    padding-left: 7rem;
+    padding-right: 7rem;
+    margin-left: 2rem;
+    flex-direction: row;
+  }
+  .restaurants-current-offers ul li {
+    text-align: center;
+  }
+}
+/* @media (max-width: 650px) {
+  .card-results {
+    padding: 7rem;
+  }
+} */
+@media (max-width: 609px) {
+  .restaurant-current-offers ul {
+    text-align: center;
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
+  }
+}
+
+@media (max-width: 525px) {
+  .card-results .restaurant-info .restaurant-card h1 {
+    
   }
 }
