--- a/backend/frontend/src/style/Basket.css
+++ b/backend/frontend/src/style/Basket.css
@@ -32,7 +32,7 @@
 .delivery-toggle {
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
+  /* gap: 0.4rem; */
   margin-bottom: 2rem;
   background-color: #eee;
   border-radius: var(--button-border-radius);
@@ -54,7 +54,7 @@
   font-size: 1.6rem;
   transition: background-color 0.3s ease;
   color: var(--button-primary-color);
-  border: var(--button-secondary-border-color);
+  /* border: var(--button-secondary-border-color); */
 }
 .delivery-toggle button:hover {
   background-color: var(--button-secondary-hover-color);
