--- a/backend/frontend/src/style/Navbar.css
+++ b/backend/frontend/src/style/Navbar.css
@@ -4,7 +4,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-width: 400px;
   height: 7rem;
   padding: 0.6rem 3rem;
   position: absolute;
@@ -15,14 +14,6 @@ nav {
   z-index: 10;
   box-shadow: 8px 8px 16px var(--shadow-dark), -8px -8px 16px var(--shadow-light);
 }
-
-/* nav h1 {
-  font-family: "Merienda", cursive;
-  font-weight: bolder;
-  font-size: 3.6rem;
-  cursor: pointer;
-  color: var(--color-1);
-} */
 
 nav .logo {
   width: 20rem;
@@ -142,22 +133,13 @@ nav .logo {
   display: flex;
   align-items: center;
   position: relative;
-
   /* color: #266241; */
   color: var(--button-primary-color);
-
   margin-left: 2rem;
-
   text-decoration: none;
   transition: color 0.3s ease;
   cursor: pointer;
 }
-/* .cart-logo svg:hover {
-  color: var(--button-primary-hover-color);
-}
-.cart-logo svg:active {
-  color: var(--button-primary-active-color);
-} */
 
 .cart-logo .item-count {
   background-color: var(--color-3);
@@ -169,4 +151,157 @@ nav .logo {
   position: absolute;
   top: -1.2rem;
   right: -1.1rem;
+}
+
+.mobile-basket-and-register-container {
+  display: none;
+}
+
+nav .container {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  nav .logo {
+    width: 15rem;
+    cursor: pointer;
+  }
+
+  nav .container {
+    display: flex;
+    align-items: center;
+  }
+
+  nav .container .hamburger {
+    color: var(--button-primary-color);
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+
+  nav .container .hamburger:hover {
+    color: var(--button-primary-hover-color);
+  }
+
+  nav .container .hamburger:active {
+    color: var(--button-primary-active-color);
+  }
+
+  .basket-and-register-container {
+    display: none;
+  }
+
+  .mobile-cart-logo {
+    display: flex;
+    align-items: center;
+    position: relative;
+    color: var(--button-primary-color);
+    margin-left: 2rem;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .mobile-cart-logo .item-count {
+    background-color: var(--color-3);
+    color: black;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 0.2rem 0.6rem;
+    font-size: 1.2rem;
+    position: absolute;
+    top: -1.2rem;
+    right: -1.1rem;
+  }
+
+  .mobile-basket-and-register-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 3rem;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    background-color: var(--background-color);
+    width: 22rem;
+    padding: 0 0 2rem;
+    min-height: 10rem;
+    border-bottom-left-radius: 2rem;
+    box-shadow: -2px 7px 10px rgba(128, 128, 128, 0.37);
+  }
+
+  .mobile-basket-and-register-container .mobile-welcome-message {
+    margin: 0;
+    font-weight: bolder;
+    color: var(--button-primary-color);
+  }
+
+  .mobile-basket-and-register-container .user-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 3rem;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+  }
+
+  .mobile-basket-and-register-container .mobile-dropdown-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .mobile-basket-and-register-container .mobile-dropdown-item {
+    padding: 1.6rem 0;
+    text-align: center;
+    text-decoration: none;
+    border-bottom: 1px solid gray;
+    color: inherit;
+    font-weight: bold;
+  }
+
+  .mobile-basket-and-register-container .mobile-dropdown-item:hover {
+    background-color: var(--button-primary-color);
+    color: white;
+  }
+
+  .mobile-basket-and-register-container .button-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 2rem;
+    padding-top: 2rem;
+  }
+
+  .mobile-basket-and-register-container button {
+    padding: 1rem 2rem;
+    margin: 0 1rem;
+    border: none;
+    border-radius: 3rem;
+    cursor: pointer;
+    background-color: var(--button-primary-color);
+    color: white;
+    font-size: 1.6rem;
+    transition: background-color 0.3s ease;
+  }
+
+  .mobile-basket-and-register-container .register-button:hover {
+    background-color: var(--button-primary-hover-color);
+  }
+
+  .mobile-basket-and-register-container .register-button:active {
+    background-color: var(--button-primary-active-color);
+  }
+
+  .mobile-basket-and-register-container .login-button {
+    background-color: transparent;
+    color: var(--color-1);
+    border: 1px solid var(--color-1);
+    order: 2;
+  }
+
+  .toggle-button:hover {
+    background-color: #163825;
+  }
 }
