--- a/backend/frontend/src/style/Section.css
+++ b/backend/frontend/src/style/Section.css
@@ -3,7 +3,7 @@
 .user-section {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 4rem 2rem;
+  padding: 4rem 2rem 0;
   /* background-color: #fff; */
   border-radius: 1rem;
   /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
@@ -63,7 +63,7 @@
   gap: 5rem;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 2rem 0;
 }
 
 .text1 {
@@ -71,17 +71,18 @@
   /* color: #444; */
   line-height: 1.8;
   margin: 0;
-  flex: 1;
+  /* flex: 1; */
 }
 
 .img-text img {
   flex: 1;
+  width: 600px;
 }
 
 .footer-image {
-  width: 300px;
-  border-radius: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  /* border-radius: 1rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
   flex-shrink: 0;
 }
 
